[package]
name = "PinyinWerkzeug"
version = "0.0.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf_codegen = "0.10.0"
phf = { version = "0.10", default-features = false }
clap = { version = "3.2.8", features = ["derive"] }

[[bin]]
name = "create_map"
path = "src/create_map.rs"

[[bin]]
name = "convert"
path = "src/convert.rs"
